src/test/deca/context/invalid/resultats/test1_bool_print-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test1_bool_print.ass introuvable
